# simple-shooter

./: CMakeLists.txt
include/: enemy.h  entityfactory.h  explosion.h  game.h  introstate.h  player.h  playstate.h  projectile.h  rect.h  shooter.h  sounds.h  star.h  timer.h  vector2.h
include/core/: animation.h  game.h  gametime.h  graphics.h  point.h  pointf.h  rect.h  rectf.h  size.h  sizef.h  sounds.h  sprite.h  state.h
include/gui/: widget.h
include/sprite_test/: batchstate.h
resources/: explosion.xcf
src/: enemy.cc  entityfactory.cc  explosion.cc  game.cc  graphics.cc  introstate.cc  main.cc  player.cc  playstate.cc  projectile.cc  rect.cc  shooter.cc  sounds.cc  sprite.cc  star.cc  timer.cc  vector2.cc
src/core/: animation.cc  game.cc  graphics.cc  point.cc  pointf.cc  rect.cc  rectf.cc  size.cc  sizef.cc  sounds.cc  sprite.cc  timer.cc  vector2.cc
src/sprite_test/: batchstate.cc  main.cc
